# ReviewMate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/models/: classifier.py
docs/: design.md  phase-1-evaluation.md
